--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Concurso Template</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
 
-    <section class="header">
-      <div class="logo">
-        <img src="img/dl.png"></img>
-      </div>
-    </section>
+<head>
+  <meta charset="utf-8">
+  <title>Concurso Template</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <section id="concurso" class="cuerpo">
-        <div class="titulo">
-                <h4>Concurso</h4>
+<body>
 
-        </div>
-      <div class="form">
-        <img src="img/rec.png"></img>
-      <!--<form action="/#wpcf7-f31-o1" method="post" class="XXXXXXXXXXX" novalidate="novalidate" id="XXXXXXXXXX">-->
-      <!--</form>-->
-      </div>
-
-      <div class="containeruno">
-        <h5>Explicación</h5>
-      </div>
-    </section>
-
-
-    <div class="linea">
+  <section class="header">
+    <div class="logo">
+      <img class="derco" src="img/dl.png"></img>
     </div>
-    <section class="footer">
-      <div class="lfooter">
+  </section>
+
+  <section id="concurso" class="cuerpo">
+    <div class="titulo">
+      <h4>Concurso</h4>
+    </div>
+    <div class="form">
+      <form action="" method="post" class="" novalidate="novalidate" id="XXXXXXXXXX">
+        First name:<br>
+        <input type="text" name="firstname"><br> Last name:<br>
+        <input type="text" name="lastname">
+      </form>
+    </div>
+
+    <div class="bajada">
+      <h5>Explicación</h5>
+    </div>
+  </section>
+
+
+  <div class="linea">
+  </div>
+  <section class="footer">
+    <div class="lfooter">
+      <img src="img/dercofoot.png" width="200px">
+    </div>
+    <div class="copy">
+      <h2>Copyright© 2017 Derco Center. Todos los derechos reservados.</h2>
+    </div>
+    <div class="social">
+      <div class="facebook">
+        <img src="img/facebook.png" width="30em">
       </div>
-      <div class="copy">
+      <div class="Twitter">
+        <img src="img/twitter.png" width="30em">
       </div>
-      <div class="social">
-        <div class="facebook">
-        </div>
-        <div class="Twitter">
-        </div>
-        <div class="Youtube">
-        </div>
-      </section>
-  </body>
+      <div class="Youtube">
+        <img src="img/youtube.png" width="3 0em">
+      </div>
+  </section>
+</body>
+
 </html>
