--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
   <title>Concurso Template</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -13,6 +15,7 @@
   <section class="header">
     <div class="logo">
       <img class="derco" src="img/dl.png"></img>
+      <img class="dercocel" src="img/logho.svg"></img>
     </div>
   </section>
 
@@ -38,20 +41,20 @@
   </div>
   <section class="footer">
     <div class="lfooter">
-      <img src="img/dercofoot.png" width="200px">
+      <img class="dercofoot" src="img/dercofoot.png" width="200px">
     </div>
     <div class="copy">
       <h2>Copyright© 2017 Derco Center. Todos los derechos reservados.</h2>
     </div>
     <div class="social">
       <div class="facebook">
-        <img src="img/facebook.png" width="30em">
+        <img src="img/facebook.png">
       </div>
       <div class="Twitter">
-        <img src="img/twitter.png" width="30em">
+        <img src="img/twitter.png">
       </div>
       <div class="Youtube">
-        <img src="img/youtube.png" width="3 0em">
+        <img src="img/youtube.png">
       </div>
   </section>
 </body>
